--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "version" : "0.1.0",
    "devDependencies" : {
-      "guanlecoja" : "0.3.5"
+      "guanlecoja" : "~0.7.0"
    },
    "name" : "buildbot_travis",
    "dependencies" : {}
